<resources>
    <string name="appName">Multiply it</string>
    <string name="act">*</string>
    <string name="numberOne">5</string>
    <string name="numberTwo">5</string>
    <string name="buttonDigit1">1</string>
    <string name="buttonDigit2">2</string>
    <string name="buttonDigit3">3</string>
    <string name="buttonDigit4">4</string>
    <string name="buttonDigit5">5</string>
    <string name="buttonDigit6">6</string>
    <string name="buttonDigit7">7</string>
    <string name="buttonDigit8">8</string>
    <string name="buttonDigit9">9</string>
    <string name="buttonDigit0">0</string>
    <string name="buttonEnter">Enter</string>
    <string name="buttonBackSpace">Back Space</string>
    <string name="textViewAnswerShow1">1*6=6</string>
    <string name="textViewAnswerShow2">2*6=12</string>
    <string name="textViewAnswerShow3">3*6=6</string>
    <string name="textViewAnswerShow4">4*6=6</string>
    <string name="textViewAnswerShow5">5*6=6</string>
    <string name="textViewAnswerShow6">6*6=6</string>
    <string name="textViewAnswerShow7">7*6=6</string>
    <string name="textViewAnswerShow8">8*6=6</string>
    <string name="textViewAnswerShow9">9*6=6</string>
    <string name="textViewAnswerShow10">10*6=6</string>
    <string name="textViewAnswerShow11">11*6=6</string>
    <string name="textViewAnswerShow12">12*6=62</string>
    <string name="textViewAnswerCount">1</string>
    <string name="textViewQuestion">12*6=</string>
    <string name="textViewAnswerShowBasic"> </string>
    <string name="settingsLoad">Loaded</string>
    <string name="settingsSave">Saved</string>
    <string name="textViewPoints"> 0 </string>
    <string name="todo">TODO</string>

    <string-array name="entries">
        <item>English</item>
        <item>Қазақ</item>
        <item>Русский</item>
    </string-array>
    <string-array name="entry_values">
        <item>en</item>
        <item>kk</item>
        <item>ru</item>

    </string-array>
    <string name="strEnter">Enter your answer.</string>
    <string name="titleAllTask">Tasks: </string>
    <string name="titleWrongTask">, wrong - </string>
    <string name="titleRightTask">, right - </string>
    <string name="textRightTask">right </string>
    <string name="textWrongTask">wrong </string>

    <string name="titleActivityPref">Preferences</string>

    <string name="menuReport">Report</string>
    <string name="menuPreferences">Preferences</string>
    <string name="menuExit">Exit</string>

    <string name="settingsMultiplySummaryOn">On</string>
    <string name="settingsMultiplySummaryOff">Off</string>

    <string name="settingsLanguageTitle">Language</string>
    <string name="settingsMultiplyTitle">Multiply</string>
    <string name="settingsDivideTitle">Divide</string>

    <string name="settingsMultiplyPreferenceScreen">Actions on</string>

    <string name="settingsMultiplyNumber1">on 1</string>
    <string name="settingsMultiplyNumber2">on 2</string>
    <string name="settingsMultiplyNumber3">on 3</string>
    <string name="settingsMultiplyNumber4">on 4</string>
    <string name="settingsMultiplyNumber5">on 5</string>
    <string name="settingsMultiplyNumber6">on 6</string>
    <string name="settingsMultiplyNumber7">on 7</string>
    <string name="settingsMultiplyNumber8">on 8</string>
    <string name="settingsMultiplyNumber9">on 9</string>
    <string name="settingsMultiplyNumber10">on 10</string>

    <string name="settingsDivideSummaryOff">Off</string>
    <string name="settingsDivideSummaryOn">On</string>
    <string name="operationsOn">Actions on </string>

    <string name="settingsAddTitle">ADD</string>
    <string name="settingsAddSummaryOff">Off</string>
    <string name="settingsAddSummaryOn">On</string>

    <string name="settingsSubstracTitle">SUBTRAC</string>
    <string name="settingsSubstracSummaryOff">Off</string>
    <string name="settingsSubstracSummaryOn">On</string>

    <string name="settingsAddRangeMinTitle">Start of folding range</string>
    <string name="settingsAddRangeMinSummary">Enter the first number</string>
    <string name="settingsAddRangeMaxTitle">End of addition range</string>
    <string name="settingsAddRangeMaxSummary">Enter the second number</string>

    <string name="settingsRecordTitle">Time lesson</string>
    <string name="settingsRecordSummaryOn">with time limit?</string>
    <string name="settingsRecordSummaryOff">no time limit?</string>
    <string name="settingsRecordSwitchTextOff">Off</string>
    <string name="settingsRecordSwitchTextOn">On</string>

    <string name="buttonSettingsTitle">Preferences</string>
    <string name="buttonGameTitle">Game</string>
    <string name="buttonGradesTitle">Results</string>
    <string name="buttonEndTitle">End</string>

    <string name="settingsSoundTitle">Sound effects</string>
    <string name="settingsSoundOn">On</string>
    <string name="settingsSoundOff">Off</string>

    <string name="alertDialogTitle">Lesson not completed!</string>
    <string name="alertDialogMessage">Continue from last lesson?</string>
    <string name="alertDialogNegativeButtonText">Start new lesson</string>
    <string name="alertDialogPositiveButtonText">Continue lesson</string>
    <string name="alertDialogNeutralButtonText">Cancel</string>

    <string name="finishTextViewResultTitle">The result of the lessons</string>

    <string name="finishTextNameUser">Name user: </string>
    <string name="finishTextPrimerovTasks">Count (all tasks, right task, wrong task):</string>
    <string name="finishTextViewMDSA">Actions:  *  /  +  - </string>
    <string name="finishTextViewMultiplyNumbers">Multiply Numbers: </string>
    <string name="finishTextViewPoints">Count points</string>
    <string name="finishStringViewPoints">000</string>
    <string name="finishStringUserName">Noname</string>
    <string name="finishStringPrimerovTasks"> 40, 40, 0 </string>
    <string name="finishStringActions"> *  /  +  - </string>
    <string name="finishStringMultiplyNumbers">1, 2, 3, 4, 5, 6, 7, 8, 9, 10</string>

    <string name="finishButtonSaveTitle">Save result</string>
<!--    <string name="finishButtonCancelTitle">Do not save</string>-->


    <string name="finishLeassonActivityNotUserName">"Enter your name !"</string>

<!--    <string name="makeFotoActivityButtonTakeFoto">"Take foto"</string>-->
<!--    <string name="makeFotoActivityButtonOpenCamera">"Open Camera"</string>-->

    <string name="gradeBookActivityNameUser"> Name, </string>
    <string name="gradeBookActivityDateLesson">Date, </string>
    <string name="gradeBookActivityTextViewMDSA">Actions, </string>
    <string name="gradeBookActivityMultiplyNumbers">Numbers, </string>
    <string name="gradeBookActivityViewPoints">Points</string>
    <string name="gradeBookActivityButtonClear">Delete results</string>
    <string name="loadSoundToastText">Can\'t upload file</string>

</resources>
