<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textViewAnswerCount"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:gravity="right"
        android:text="" />
    <ProgressBar
        android:id="@+id/progressBar"
        style="@android:style/Widget.DeviceDefault.Light.ProgressBar.Horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:indeterminate="false"
        android:max="12"
        android:progress="0" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                tools:srcCompat="@drawable/heart" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/todo"
                tools:srcCompat="@drawable/heart" />

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/todo"
                tools:srcCompat="@drawable/heart" />

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/todo"
                tools:srcCompat="@drawable/heart" />

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/todo"
                tools:srcCompat="@drawable/heart" />
        </LinearLayout>

        <GridLayout
            android:id="@+id/gridLayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|center_vertical"
            android:layout_weight="3"
            android:columnCount="3"
            android:gravity="bottom"
            android:orientation="horizontal"
            tools:ignore="MissingConstraints,NestedWeights">

            <TextView
                android:id="@+id/textViewAnswerShow1"
                android:layout_row="0"
                android:layout_rowWeight="1"
                android:layout_column="0"
                android:layout_columnWeight="1"
                android:layout_gravity="center"
                android:text="@string/textViewAnswerShow1"
                android:textSize="14sp"
                android:visibility="invisible" />

            <TextView
                android:id="@+id/textViewAnswerShow2"
                android:layout_row="0"
                android:layout_rowWeight="1"
                android:layout_column="1"
                android:layout_columnWeight="1"
                android:layout_gravity="center"
                android:text="@string/textViewAnswerShow2"
                android:textSize="14sp"
                android:visibility="invisible" />

            <TextView
                android:id="@+id/textViewAnswerShow3"
                android:layout_row="0"
                android:layout_rowWeight="1"
                android:layout_column="2"
                android:layout_columnWeight="1"
                android:layout_gravity="center"
                android:text="@string/textViewAnswerShow3"
                android:textSize="14sp"
                android:visibility="invisible" />

            <TextView
                android:id="@+id/textViewAnswerShow4"
                android:layout_height="wrap_content"
                android:layout_row="1"
                android:layout_rowWeight="1"
                android:layout_column="0"
                android:layout_columnWeight="1"
                android:layout_gravity="center"
                android:text="@string/textViewAnswerShow4"
                android:textSize="14sp"
                android:visibility="invisible" />

            <TextView
                android:id="@+id/textViewAnswerShow5"
                android:layout_row="1"
                android:layout_rowWeight="1"
                android:layout_column="1"
                android:layout_columnWeight="1"
                android:layout_gravity="center"
                android:text="@string/textViewAnswerShow5"
                android:textSize="14sp"
                android:visibility="invisible" />

            <TextView
                android:id="@+id/textViewAnswerShow6"
                android:layout_row="1"
                android:layout_rowWeight="1"
                android:layout_column="2"
                android:layout_columnWeight="1"
                android:layout_gravity="center"
                android:text="@string/textViewAnswerShow6"
                android:textSize="14sp"
                android:visibility="invisible" />

            <TextView
                android:id="@+id/textViewAnswerShow7"
                android:layout_row="2"
                android:layout_rowWeight="1"
                android:layout_column="0"
                android:layout_columnWeight="1"
                android:layout_gravity="center"
                android:text="@string/textViewAnswerShow7"
                android:textSize="14sp"
                android:visibility="invisible" />

            <TextView
                android:id="@+id/textViewAnswerShow8"
                android:layout_row="2"
                android:layout_rowWeight="1"
                android:layout_column="1"
                android:layout_columnWeight="1"
                android:layout_gravity="center"
                android:text="@string/textViewAnswerShow8"
                android:textSize="14sp"
                android:visibility="invisible" />

            <TextView
                android:id="@+id/textViewAnswerShow9"
                android:layout_row="2"
                android:layout_rowWeight="1"
                android:layout_column="2"
                android:layout_columnWeight="1"
                android:layout_gravity="center"
                android:text="@string/textViewAnswerShow9"
                android:textSize="14sp"
                android:visibility="invisible" />

            <TextView
                android:id="@+id/textViewAnswerShow10"
                android:layout_row="3"
                android:layout_rowWeight="1"
                android:layout_column="0"
                android:layout_columnWeight="1"
                android:layout_gravity="center"
                android:text="@string/textViewAnswerShow10"
                android:textSize="14sp"
                android:visibility="invisible" />

            <TextView
                android:id="@+id/textViewAnswerShow11"
                android:layout_row="3"
                android:layout_rowWeight="1"
                android:layout_column="1"
                android:layout_columnWeight="1"
                android:layout_gravity="center"
                android:text="@string/textViewAnswerShow11"
                android:textSize="14sp"
                android:visibility="invisible" />

            <TextView
                android:id="@+id/textViewAnswerShow12"
                android:layout_row="3"
                android:layout_rowWeight="1"
                android:layout_column="2"
                android:layout_columnWeight="1"
                android:layout_gravity="center"
                android:text="@string/textViewAnswerShow12"
                android:textSize="14sp"
                android:visibility="invisible" />
        </GridLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.1"
            android:orientation="horizontal"
            tools:ignore="MissingConstraints">

            <TextView
                android:id="@+id/textViewQuestion"
                android:layout_width="66dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"

                android:layout_weight="3"
                android:width="20dp"
                android:gravity="end|center"
                android:text="@string/textViewQuestion"
                android:textSize="34sp" />

            <TextView
                android:id="@+id/textViewAnswerShowBasic"
                android:layout_width="20dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:layout_weight="3"
                android:maxLength="4"
                android:text="@string/textViewAnswerShowBasic"
                android:textSize="34sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="horizontal">

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="4"

                />

            <GridLayout
                android:id="@+id/gridLayout2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center_vertical"
                android:layout_weight="2"
                android:columnCount="3"
                android:gravity="bottom"
                android:orientation="horizontal"
                android:textSize="14sp"
                tools:ignore="MissingConstraints,NestedWeights">

                <Button
                    android:id="@+id/buttonDigit1"
                    android:layout_row="0"
                    android:layout_column="0"
                    android:layout_columnWeight="1"
                    android:layout_gravity="center"
                    android:text="@string/buttonDigit1" />

                <Button
                    android:id="@+id/buttonDigit2"
                    android:layout_row="0"
                    android:layout_rowWeight="1"
                    android:layout_column="1"
                    android:layout_columnWeight="1"
                    android:layout_gravity="center"
                    android:text="@string/buttonDigit2"
                    android:textColorHint="#FFFFFF" />

                <Button
                    android:id="@+id/buttonDigit3"
                    android:layout_row="0"
                    android:layout_rowWeight="1"
                    android:layout_column="2"
                    android:layout_columnWeight="1"
                    android:layout_gravity="center"
                    android:text="@string/buttonDigit3" />


                <Button
                    android:id="@+id/buttonDigit4"
                    android:layout_row="1"
                    android:layout_rowWeight="1"
                    android:layout_column="0"
                    android:layout_columnWeight="1"
                    android:layout_gravity="center"
                    android:text="@string/buttonDigit4"
                    android:textSize="14sp" />

                <Button
                    android:id="@+id/buttonDigit5"
                    android:layout_row="1"
                    android:layout_rowWeight="1"
                    android:layout_column="1"
                    android:layout_columnWeight="1"
                    android:layout_gravity="center"
                    android:text="@string/buttonDigit5" />

                <Button
                    android:id="@+id/buttonDigit6"
                    android:layout_row="1"
                    android:layout_rowWeight="1"
                    android:layout_column="2"
                    android:layout_columnWeight="1"
                    android:layout_gravity="center"
                    android:text="@string/buttonDigit6" />

                <Button
                    android:id="@+id/buttonDigit7"
                    android:layout_row="2"
                    android:layout_rowWeight="1"
                    android:layout_column="0"
                    android:layout_columnWeight="1"
                    android:layout_gravity="center"
                    android:text="@string/buttonDigit7" />

                <Button
                    android:id="@+id/buttonDigit8"
                    android:layout_row="2"
                    android:layout_rowWeight="1"
                    android:layout_column="1"
                    android:layout_columnWeight="1"
                    android:layout_gravity="center"
                    android:text="@string/buttonDigit8" />

                <Button
                    android:id="@+id/buttonDigit9"
                    android:layout_row="2"
                    android:layout_rowWeight="1"
                    android:layout_column="2"
                    android:layout_columnWeight="1"
                    android:layout_gravity="center"
                    android:text="@string/buttonDigit9" />

                <Button
                    android:id="@+id/buttonBackSpace"
                    android:layout_row="3"
                    android:layout_rowWeight="1"
                    android:layout_column="0"
                    android:layout_columnWeight="1"
                    android:layout_gravity="center"
                    android:text="@string/buttonBackSpace"

                    android:textSize="10sp" />

                <Button
                    android:id="@+id/buttonDigit0"
                    android:layout_row="3"
                    android:layout_rowWeight="1"
                    android:layout_column="1"
                    android:layout_columnWeight="1"
                    android:layout_gravity="center"
                    android:text="@string/buttonDigit0" />

                <Button
                    android:id="@+id/buttonEnter"
                    android:layout_row="3"
                    android:layout_rowWeight="1"
                    android:layout_column="2"
                    android:layout_columnWeight="1"
                    android:layout_gravity="center"
                    android:text="@string/buttonEnter" />

            </GridLayout>

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="4"

                />

        </LinearLayout>


    </LinearLayout>



</LinearLayout>
