<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/finishTextEditResult"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="20dp"
        android:gravity="center"
        android:text="@string/finishTextViewResultTitle" />


    <LinearLayout
        android:id="@+id/gradeBookLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/finishTextEditResult"
        android:layout_marginTop="8dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/gradeBookActivityNameUser"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.2"
            android:text="@string/gradeBookActivityNameUser" />

        <TextView
            android:id="@+id/gradeBookActivityDateLesson"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.2"
            android:gravity="start"

            android:text="@string/gradeBookActivityDateLesson" />

        <TextView
            android:id="@+id/gradeBookActivityTextViewMDSA"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.2"
            android:gravity="start"

            android:text="@string/gradeBookActivityTextViewMDSA" />

        <TextView
            android:id="@+id/gradeBookActivityMultiplyNumbers"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.3"
            android:gravity="start"

            android:text="@string/gradeBookActivityMultiplyNumbers" />

        <TextView
            android:id="@+id/gradeBookActivityViewPoints"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.1"
            android:gravity="start"

            android:text="@string/gradeBookActivityViewPoints" />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/gradeBookLinearLayout"
        android:layout_marginTop="28dp"

        app:layoutManager="LinearLayoutManager" />
</RelativeLayout>
